# axum-ticketstore

./: .env  Cargo.toml  docker-compose.yml
postHTTP/: create-user.posting.yaml  login.posting.yaml  logout.posting.yaml
postHTTP/tickets/: create-ticket.posting.yaml  get-all-tickets.posting.yaml
seed/: init.sql
src/: lib.rs  main.rs
src/database/: mod.rs  prelude.rs  tickets.rs  users.rs
src/middleware/: guard.rs
src/routes/: health_check.rs  mod.rs  ticket_create.rs  ticket_get.rs  ticket_update_atomic.rs  ticket_update_partial.rs  user.rs  user_auth.rs  users.rs
src/utils/: api_error.rs  hashing.rs  jwt.rs  logging.rs  mod.rs
